# slack-codex

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md  OPERATIONS.md
src/: codex.rs  config.rs  lib.rs  lifecycle.rs  main.rs  sessions.rs  slack.rs  workspace_catalog.rs
