[package]
name = "slack-codex"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
publish = false
description = "Personal Slack DM bridge for local Codex sessions."

[dependencies]
dotenvy = "0.15.7"
futures-util = "0.3.31"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
